// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography render correctly 1`] = `
<div>
  <div
    class="rc-typography rc-typography--md rc-typography--text"
  >
    这是一条文本
  </div>
</div>
`;

exports[`Typography render correctly when ellipsis has value 1`] = `
<div>
  <div
    class="rc-typography rc-typography--md rc-typography--text rc-multi-ellipsis--l2"
  >
     
    In the process of internal desktop applications development, many different design specs and implementations would be involved
  </div>
</div>
`;

exports[`Typography render correctly when using ellipsis prop 1`] = `
<div>
  <div
    class="rc-typography rc-typography--md rc-typography--text rc-ellipsis"
  >
    In the process of internal desktop applications development, many different design specs and implementations would be involved
  </div>
</div>
`;

exports[`Typography render correctly when using level prop 1`] = `
<div>
  <div
    class="rc-typography rc-typography--md rc-typography--title rc-typography--l1"
  >
    一级测试标题
  </div>
</div>
`;

exports[`Typography render correctly when using type prop 1`] = `
<div>
  <div
    class="rc-typography rc-typography--danger rc-typography--md rc-typography--text"
  >
    这是一条文本
  </div>
</div>
`;

exports[`Typography render correctly when using underline prop 1`] = `
<div>
  <div
    class="rc-typography rc-typography--md rc-typography--text rc-typography--underline"
  >
    这是一条文本
  </div>
</div>
`;
